# app/controllers/api/v1/artists_controller.rb
@@ -2,14 +2,9 @@
 
 module Api
   module V1
-    class AlbumsController < ApplicationController
+    class ArtistsController < ApplicationController
       def index
-        if params[:artist_slug].present?
-          artist = Artist.friendly.find(params[:artist_slug])
-          resources = Album.where(artist: artist)
-        else
-          resources = Album.all
-        end
+        resources = Artist.all
 
         render locals: { resources: resources }
       end
@@ -19,10 +14,10 @@ module Api
       end
 
       def create
-        resource = Album.new(resource_params)
+        resource = Artist.new(resource_params)
 
         if resource.save
-          render :show, locals: { resource: resource }, status: :created, location: api_v1_album_url(resource)
+          render :show, locals: { resource: resource }, status: :created, location: api_v1_artist_url(resource)
         else
           render json: resource.errors, status: :unprocessable_entity
         end
@@ -43,11 +38,11 @@ module Api
       private
 
       def resource
-        @resource ||= Album.find(params[:id])
+        @resource ||= Artist.friendly.find(params[:slug])
       end
 
       def resource_params
-        params.require(:album).permit(:title, :description, :release_year, :genre_id, :artist_id)
+        params.require(:artist).permit(:name, :description)
       end
     end
   end
